--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -124,4 +124,18 @@
             android:layout_height="wrap_content"
             android:text="Push manually"></Button>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+        <EditText
+        android:id="@+id/speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:ems="10"
+        android:hint="Download speed"
+        android:layout_gravity="center"
+        android:inputType="numberSigned" />
+    </LinearLayout>
 </LinearLayout>
