--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,217 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.AppBarOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.AppBarOverlay" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="right">
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
-            android:id="@+id/speed"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:ems="7"
-            android:textStyle="italic"
-            android:textSize="30dp"
-            android:hint="Download speed"
             android:layout_gravity="right"
-            android:inputType="numberSigned" />
-    </LinearLayout>
+            android:layout_marginTop="10dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
-        <TextView
+            <TextView
+                android:id="@+id/speed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="0.1"
+                android:ems="7"
+                android:hint="Download speed"
+                android:inputType="numberSigned"
+                android:textSize="30dp"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Location coordinates:"
-            android:layout_weight="0.1"
-            android:gravity="left"
-            android:textSize="27dp"
-            android:textColor="#000000"/>
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/X"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.1"
+                android:gravity="left"
+                android:text="Location coordinates:"
+                android:textColor="#000000"
+                android:textSize="27dp" />
+
+            <TextView
+                android:id="@+id/X"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.1"
+                android:ems="5"
+                android:gravity="left"
+                android:hint="X"
+                android:inputType="numberSigned"
+                android:textSize="30dp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/Y"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.1"
+                android:ems="5"
+                android:gravity="left"
+                android:hint="Y"
+                android:inputType="numberSigned"
+                android:textSize="30dp"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:layout_marginLeft="20dp"
-            android:gravity="left"
-            android:ems="5"
-            android:textSize="30dp"
-            android:textStyle="italic"
-            android:hint="X"
-            android:inputType="numberSigned" />
-
-        <TextView
-            android:id="@+id/Y"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:layout_marginLeft="20dp"
-            android:ems="5"
-            android:gravity="left"
-            android:hint="Y"
-            android:inputType="numberSigned"
-            android:textSize="30dp"
-            android:textStyle="italic" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="35dp"
-        android:layout_gravity="left"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:text="MQTT IP address:"
-        android:layout_weight="1"
-        android:textSize="27dp"
-        android:textColor="#000000"/>
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginBottom="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left">
-        <EditText
-            android:id="@+id/editIpAddress"
             android:layout_gravity="left"
-            android:layout_marginLeft="20dp"
-            android:layout_width="wrap_content"
+            android:layout_marginTop="35dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:text="MQTT IP address:"
+                android:textColor="#000000"
+                android:textSize="27dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="255.255.255.255"
-            android:textSize="30dp"
-            android:layout_weight="1">
-        </EditText>
-
-        <Button
-            android:id="@+id/btnLocation"
-            android:layout_marginRight="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:text="Connect">
-        </Button>
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="25dp"
-        android:background="@android:color/darker_gray"/>
-
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="40dp">
-
-        <TextView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Send message once "
             android:layout_gravity="left"
-            android:textSize="27dp"
-            android:layout_weight="1"
-            android:textColor="#000000"/>
+            android:layout_marginBottom="20dp">
 
-        <Button
-            android:id="@+id/pushManually"
-            android:layout_marginRight="20dp"
+            <EditText
+                android:id="@+id/editIpAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:hint="255.255.255.255"
+                android:textSize="30dp"></EditText>
+
+            <Button
+                android:id="@+id/btnLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="Connect"
+                android:textSize="17dp"></Button>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="25dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp">
+
+            <TextView
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:text="Send message once "
+                android:textColor="#000000"
+                android:textSize="27dp" />
+
+            <Button
+                android:id="@+id/pushManually"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="Push once"
+                android:textSize="17dp"></Button>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:text="Push once"></Button>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="left">
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Time-out value:"
-            android:gravity="center"
-            android:textSize="27dp"
-            android:textColor="#000000"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="5dp"
-        android:layout_gravity="right"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/timeout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_gravity="left"
-            android:layout_weight="1"
-            android:textSize="30dp">
-        </EditText>
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/resetTime"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:text="Time-out value:"
+                android:textColor="#000000"
+                android:textSize="27dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:textSize="17dp"
-            android:text="Reset timeout"></Button>
-    </LinearLayout>
+            android:layout_gravity="right"
+            android:layout_marginTop="5dp">
 
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="center">
+            <EditText
+                android:id="@+id/timeout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:textSize="30dp"></EditText>
 
-        <Switch
-            android:id="@+id/pushContinuously"
-            android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/resetTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="Reset timeout"
+                android:textSize="17dp"></Button>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:gravity="left"
-            android:textSize="27dp"
-            android:text="Send messages continuously   "
-            android:layout_marginRight="20dp"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp">
 
+            <Switch
+                android:id="@+id/pushContinuously"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="Send messages continuously   "
+                android:textSize="27dp" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
