--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -36,9 +36,20 @@
                 android:layout_gravity="right"
                 android:layout_weight="0.1"
                 android:ems="7"
-                android:hint="Download speed"
+                android:hint="Down speed"
                 android:inputType="numberSigned"
-                android:textSize="30dp"
+                android:textSize="24dp"
+                android:textStyle="italic" />
+            <TextView
+                android:id="@+id/upSpeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="0.1"
+                android:ems="7"
+                android:hint="Up speed"
+                android:inputType="numberSigned"
+                android:textSize="24dp"
                 android:textStyle="italic" />
         </LinearLayout>
 
