--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -38,8 +38,15 @@
                 android:ems="7"
                 android:hint="Down speed"
                 android:inputType="numberSigned"
-                android:textSize="24dp"
-                android:textStyle="italic" />
+                android:textSize="24dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp">
+
             <TextView
                 android:id="@+id/upSpeed"
                 android:layout_width="wrap_content"
@@ -203,8 +210,7 @@
                 android:layout_gravity="left"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="1"
-                android:textSize="30dp">
-            </EditText>
+                android:textSize="30dp"></EditText>
 
             <Button
                 android:id="@+id/resetTime"
