--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -31,14 +31,14 @@
 
             <TextView
                 android:id="@+id/speed"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="left"
                 android:layout_weight="0.1"
                 android:ems="7"
                 android:hint="Down speed"
                 android:inputType="numberSigned"
-                android:textSize="24dp"/>
+                android:textSize="22dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -49,14 +49,14 @@
 
             <TextView
                 android:id="@+id/upSpeed"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_weight="0.1"
                 android:ems="7"
                 android:hint="Up speed"
                 android:inputType="numberSigned"
-                android:textSize="24dp"
+                android:textSize="22dp"
                 android:textStyle="italic" />
         </LinearLayout>
 
@@ -65,6 +65,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/deviceId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.1"
+                android:gravity="left"
+                android:text="device"
+                android:textColor="#000000"
+                android:textSize="15dp" />
 
             <TextView
                 android:layout_width="match_parent"
