--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -160,6 +160,16 @@
                 android:textSize="17dp"></Button>
         </LinearLayout>
 
+        <Switch
+            android:id="@+id/pushHttp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="Use http:   "
+            android:textSize="27dp" />
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
