--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,8 +5,8 @@
     android:layout_height="fill_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -24,36 +24,34 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="left"
             android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/speed"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
                 android:layout_weight="0.1"
-                android:ems="7"
                 android:hint="Down speed"
-                android:inputType="numberSigned"
+                android:inputType="numberSigned|numberDecimal"
                 android:textSize="22dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="left"
             android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/upSpeed"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_weight="0.1"
-                android:ems="7"
                 android:hint="Up speed"
                 android:inputType="numberSigned"
                 android:textSize="22dp"
@@ -61,7 +59,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="392dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="vertical">
@@ -72,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="0.1"
-                android:gravity="left"
+                android:gravity="end"
                 android:text="device"
                 android:textColor="#000000"
                 android:textSize="15dp" />
@@ -89,7 +87,7 @@
 
             <TextView
                 android:id="@+id/X"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="0.1"
@@ -102,7 +100,7 @@
 
             <TextView
                 android:id="@+id/Y"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="0.1"
@@ -121,7 +119,7 @@
             android:layout_marginTop="35dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="1"
@@ -192,6 +190,7 @@
             </EditText>
 
         </LinearLayout>
+
         <Switch
             android:id="@+id/checkboxSpeedTest"
             android:layout_width="wrap_content"
@@ -202,6 +201,7 @@
             android:gravity="left"
             android:text="Test speed"
             android:textSize="27dp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
